# embassy

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.example.toml  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  License.txt  NOTICE.md  README.Token.md  README.md  README.txt  RELEASE.md  SECURITY.md  SW-Content-Register.txt  build.rs  build_common.rs  ci-nightly.sh  ci-xtensa.sh  ci.sh  ci_stable.sh  deny.toml  devenv.nix  devenv.yaml  flake.nix  fmtall.ps1  fmtall.sh  index.html  memory.x  nginx.conf  rust-analyzer.json  rust-toolchain-nightly.toml  rust-toolchain.toml  rustfmt.toml  t.py  (+2 more)
.cargo/: config  (+1 more)
cyw43/: CHANGELOG.md  Cargo.toml  README.md
cyw43-firmware/: .gitignore  43439A0.bin.bak  Cargo.toml  README.md  nvram_murata_1yn.txt  nvram_murata_2bc.txt  nvram_rp2040.txt  nvram_sterling_lwb+.txt  write_nvrams.rs
cyw43-firmware/src/: lib.rs
cyw43-pio/: CHANGELOG.md  Cargo.toml  README.md
cyw43-pio/src/: lib.rs
cyw43/src/: ble_connector.rs  bluetooth.rs  bus.rs  chip.rs  consts.rs  control.rs  countries.rs  events.rs  fmt.rs  hci_connector.rs  ioctl.rs  lib.rs  nvram.rs  runner.rs  sdio.rs  spi.rs  structs.rs  util.rs  utilities.rs
embassy-ambiq/: Cargo.toml  README.md
embassy-ambiq/src/: gpio.rs  lib.rs  time_driver.rs
embassy-at-cmux/: Cargo.toml  README.md
embassy-at-cmux/src/: fmt.rs  frame.rs  lib.rs
embassy-boot/: CHANGELOG.md  Cargo.toml  README.md
embassy-boot-nrf/: CHANGELOG.md  Cargo.toml  README.md
embassy-boot-nrf/src/: lib.rs
embassy-boot-rp/: CHANGELOG.md  Cargo.toml  README.md
embassy-boot-rp/src/: lib.rs
embassy-boot/boot/: Cargo.toml  README.md
embassy-boot/boot/src/: boot_loader.rs  firmware_updater.rs  firmware_writer.rs  large_erase.rs  lib.rs  mem_flash.rs  partition.rs
embassy-boot/loader/: Cargo.toml
embassy-boot/loader/src/: main.rs
embassy-boot/nrf/: Cargo.toml  README.md  memory-s140.x  memory.x
embassy-boot/nrf/.cargo/: config.toml
embassy-boot/nrf/src/: lib.rs  main.rs
embassy-boot/rp/: Cargo.toml  README.md  build.rs
embassy-boot/rp/src/: lib.rs
embassy-boot/src/: boot_loader.rs  fmt.rs  lib.rs  mem_flash.rs  usb_dfu_app.rs  usb_dfu_dfu.rs
embassy-boot/src/digest_adapters/: ed25519_dalek.rs  mod.rs
embassy-boot/src/firmware_updater/: asynch.rs  blocking.rs  mod.rs
embassy-boot/src/fmt/: no_panic_msgs.rs
embassy-boot/src/test_flash/: asynch.rs  blocking.rs  mod.rs
embassy-boot/stm32/: Cargo.toml  README.md  build.rs  memory.x
embassy-cortex-m/: Cargo.toml
embassy-cortex-m/src/: executor.rs  interrupt.rs  lib.rs  peripheral.rs
embassy-cxd56xx/: Cargo.toml  ramconfig-new.ld  ramconfig.ld
embassy-embedded-hal/: CHANGELOG.md  Cargo.toml  README.md  build.rs
embassy-embedded-hal/src/: adapter.rs  flash.rs  lib.rs
embassy-executor/: CHANGELOG.md  Cargo.toml  README.md  build.rs  build_common.rs  gen_config.py
embassy-executor-macros/: CHANGELOG.md  Cargo.toml  README.md
embassy-executor-macros/src/: lib.rs  util.rs
embassy-executor-timer-queue/: CHANGELOG.md  Cargo.toml  README.md
embassy-executor-timer-queue/src/: lib.rs
embassy-executor/src/: fmt.rs  interrupt.rs  lib.rs  metadata.rs  spawner.rs  testutils.rs  thread.rs
embassy-executor/tests/: test.rs  ui.rs
embassy-fmt/: Cargo.toml  README.md
embassy-fmt/src/: lib.rs  no_panic_msgs.rs
embassy-futures/: CHANGELOG.md  Cargo.toml  README.md
embassy-futures/src/: block_on.rs  join.rs  lib.rs  select.rs  yield_now.rs
embassy-hal-common/: Cargo.toml  build.rs
embassy-hal-common/src/: atomic_ring_buffer.rs  drop.rs  interrupt.rs  lib.rs  macros.rs  peripheral.rs  ratio.rs  ring_buffer.rs  unborrow.rs
embassy-hal-internal/: CHANGELOG.md  Cargo.toml  README.md  build.rs
embassy-hal-internal/src/: aligned.rs  atomic_ring_buffer.rs  drop.rs  fmt.rs  interrupt.rs  lib.rs  macros.rs  peripheral.rs  ratio.rs
embassy-imxrt/: CHANGELOG.md  Cargo.toml  README.md
embassy-imxrt/src/: clocks.rs  crc.rs  dma.rs  gpio.rs  iopctl.rs  lib.rs  rng.rs  time_driver.rs
embassy-lora/: Cargo.toml
embassy-lora/src/: iv.rs  lib.rs  stm32wl.rs
embassy-macros/: Cargo.toml  README.md
embassy-macros/src/: lib.rs
embassy-mcxa/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVGUIDE.md  Embed.toml  LICENSE  README.md  SECURITY.md  SW-Content-Register.txt  build.rs  defmt.x  deny.toml  ram.ld  run.sh  rustfmt.toml
embassy-mcxa/.github/: codecov.yml  dependabot.yml
embassy-mcxa/src/: adc.rs  cdog.rs  clkout.rs  config.rs  crc.rs  dac.rs  dma.rs  executor.rs  flash.rs  flexspi.rs  gpio.rs  inputmux.rs  interrupt.rs  lib.rs  ostimer.rs  perf_counters.rs  pins.rs  reset_reason.rs  rtc.rs  spi.rs  trace.rs  trng.rs  wwdt.rs
embassy-mcxa/supply-chain/: README.md  audits.toml  config.toml
embassy-mcxa/tools/: run_and_attach_rtt.sh  run_jlink_noblock.sh
embassy-microchip/: CHANGELOG.md  Cargo.toml  README.md
embassy-microchip/src/: fmt.rs  gpio.rs  i2c.rs  lib.rs  pwm.rs  tach.rs  time_driver.rs  uart.rs
embassy-mspm0/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  build_common.rs
embassy-mspm0/src/: adc.rs  clock.rs  clocks.rs  common.rs  dma.rs  executor.rs  flash.rs  gpio.rs  i2c.rs  i2c_target.rs  lib.rs  macros.rs  mathacl.rs  opa.rs  time.rs  time_driver.rs  timer.rs  trng.rs  uart.rs  watchdog.rs  wwdt.rs
embassy-neorv32/: CHANGELOG.md  Cargo.toml  README.md  build.rs
embassy-neorv32/src/: dma.rs  gpio.rs  interrupts.rs  lib.rs  sysinfo.rs  time_driver.rs  uart.rs
embassy-net-adin1110/: CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
embassy-net-adin1110/src/: crc32.rs  crc8.rs  fmt.rs  lib.rs  mdio.rs  phy.rs  regs.rs
embassy-net-driver/: CHANGELOG.md  Cargo.toml  README.md
embassy-net-driver-channel/: CHANGELOG.md  Cargo.toml  README.md
embassy-net-driver-channel/src/: fmt.rs  lib.rs
embassy-net-driver/src/: lib.rs
embassy-net-esp-hosted-mcu/: Cargo.toml  README.md
embassy-net-esp-hosted-mcu/src/: config.rs  control.rs  esp_hosted_rpc.proto  iface.rs  ioctl.rs  lib.rs  proto.rs
(+5313 files in other folders)
