[package]
name = "embassy-at-cmux"
version = "0.1.0"
description = "Multiplexes serial channels using the CMUX standard"
keywords = ["embedded", "cmux", "embassy", "embedded-io-async", "async"]
categories = ["embedded", "hardware-support", "no-std", "network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/embassy-rs/embassy"
documentation = "https://docs.embassy.dev/embassy-at-cmux"

[features]
defmt = ["dep:defmt"]
log = ["dep:log"]

[dependencies]
defmt = { version = "0.3", optional = true }
log = { version = "0.4.14", optional = true }

heapless = { version = "0.8", default-features = false }
futures = { version = "0.3.17", default-features = false, features = [ "async-await" ] }

bitfield-struct = "0.8.0"

embedded-io-async = { version = "0.6.1" }
embassy-futures = { version = "0.1.1", path = "../embassy-futures" }
embassy-sync = { version = "0.6.1", path = "../embassy-sync" }

crc = "3.0"

[dev-dependencies]
tokio = { version = "1.37", features = ["rt", "macros"] }

[package.metadata.embassy_docs]
src_base = "https://github.com/embassy-rs/embassy/blob/embassy-at-cmux-v$VERSION/embassy-at-cmux/src/"
src_base_git = "https://github.com/embassy-rs/embassy/blob/$COMMIT/embassy-at-cmux/src/"
target = "thumbv7em-none-eabi"
features = ["defmt"]

[package.metadata.docs.rs]
features = ["defmt"]
